Gamma configurable in options menu and on a per-link basis

----------
New in 0.8
----------
Implemented link's output logs with a log viewer (Disabled by default)
Implemented a simple text reader used in various situations
Implemented volume control (per-link and globally)
Added some confirmation dialogs
Changed cancel button from A to X
Added link to mount nand on usb with a dialog notification if usb is used for networking
Implemented virtual links (gmenu2x settings, usb, log viewer, about)
Added messageboxes
Added links for firmware 2.1.x
Directories browseable from selector
Added a blending effect to selector screenshots.
Fixed some minor bugs.

----------
New in 0.7
----------
GMenu2X always returns to last section/game/selector used (until shutdown)
New params magic value: [selFullPath] which equals [selPath][selFile][selExt]
Params magic values ([selFile] & Co.) are now automatically escaped, so quotes are not needed (and may cause problems)
Added support for an optional alias file for the selector that display the full name of roms.
Fixed bug with links with special characters.
Removed some unneeded savings.
Number of rows and columns on the links page configurable.
Various little fixes and tweaks

----------
New in 0.6
----------
Implemented link scanner
Added options to links for using a selector with them
Initial support for usbnet, ftp, telnet, samba and web server
Battery led indicates disk writes (don't turn the gp2x off while the led is on)
L = PageUp, R = PageDown in lists
Raised maximum hardcoded clock to 325Mhz and default gmenu2x clock to 100Mhz
Improved virtual keyboard
Sorting functions are now case unsensitive (filebrowser, dirdialog, selector)
Wrapper script removed and fixed a related bugs (wrapper function is still available)
Link's section changeable
All link's features are configurable from the interface
Battery indicator refined
File selector starts from /mnt instead of /mnt/sd
Fixed support for fonts of different size

----------