@@ -1,4 +1,4 @@
-title=GBAdvance
+title=gpSP
 description=vba2xg
 icon=/mnt/sd/Icons/Videogames/gba-purple.png
 exec=/mnt/sd/vba2x/vba.gpe
