@@ -3,6 +3,7 @@ description=Multiple Arcade Machine Emulator
 icon=/mnt/sd/mamegp2x/mame.png
 exec=/mnt/sd/mamegp2x/mame.gpe
 params=[selFile]
+manual=/mnt/sd/mamegp2x/mame.man.png
 clock=200
 selectordir=/mnt/sd/mamegp2x/roms/
 selectorscreens=/mnt/sd/mamegp2x/screen
