@@ -32,14 +32,12 @@ private:
 	int selRow;
 	string text;
 	GMenu2X *gmenu2x;
-	vector<string> filter;
+	string filter;
 
-	void browsePath(string path, vector<string>* directories, vector<string>* files);
-	
 public:
 	string path, file;
 	FileDialog(GMenu2X *gmenu2x, string text, string filter="");
-	
+
 	bool exec();
 };
 
